re-aligning and small fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -81,6 +81,7 @@ color: #7E8897 !important;
   font-family: var(--secondary-font-style);
   font-size: 24px;
   font-weight: 300;
+  text-align: center;
 }
 
 #typewriter {
@@ -172,6 +173,7 @@ h3 {
 
 p {
   font-family: var(--secondary-font-style);
+  text-align: left;
   font-size: 18px;
   line-height: 30px;
 }
